--- a/debian.qcom/changelog
+++ b/debian.qcom/changelog
@@ -1,3 +1,9 @@
+linux-qcom (6.8.0-1002.2) jammy; urgency=medium
+
+  * Rebased to Ubuntu-6.8.0-31.31
+
+ -- Masahiro Yamada <masahiro.yamada@canonical.com>  Wed, 01 May 2024 13:45:36 +0900
+
 linux-qcom (6.8.0-1001.1) jammy; urgency=medium
 
   * Import GA1
